procps-ng-NEXT
---------------
  * docs: Don't install English manpages twice
  * skill: Match on -p again                               Debian #1025915
procps-ng-4.0.2
---------------
  * library revision - 0:1:0
    Handle absent 'core_id' in /proc/cpuinfo
  * w: Show time with D_TIME_BITS=64 on 32bit env          issue #256
 
procps-ng-4.0.1
---------------
  * library
    Re-add elogind support                                 merge #151
    Used memory is Total - Available
    Renaming, it is now libproc2
  * free: Use --kilo when only specifying --si             merge #163
  * pgrep: Add -A to ignore ancestors                      merge #160
  * pidwait: Better warning if pidfd_open not implemented
  * pmap: Dont reuse stdin filehandle                      issue #231
  * ps: threads again display when -L is used with -q      issue #234
  * ps: proper aix format string behavior was restored
  * sysctl: print dotted keys again
  * top: fix 'smaps' bug preventing build under clang      issue #235
  * top: column highlighting allowed under 'L' or 'O'
  * top: can alter autogroup nice value (like 'r' renice)
  * top: can display the following with no need to scroll
  *      cmdline, control groups, environment,
         supplimentary groups, namespaces
  * top: adds a 'message log' recall capability
  * top: will accept utf8 multi-byte input with support
         for full line editing and previous line recall
  * top: can show more than 2 abreast in summary display
  * top: can distinguish P-Core and E-core cpus
  * top: can filter both P-Core and E-core cpus
  * watch: Add equexit no-change and exit option           merge #153

procps-ng-4.0.0
---------------
  * Rename pwait to pidwait
  * free: Add committed line option                        merge #25
  * free: Fix -h --si combined options                     issue #133, #223
  * free: Fix first column justification                   issue #229, #204, #206, Debian #1001689