@@ -2,6 +2,7 @@ procps-ng-NEXT
 ---------------
   * docs: Don't install English manpages twice
   * skill: Match on -p again                               Debian #1025915
+  * ps: c flag shows command name again                    Debian #1026326
 procps-ng-4.0.2
 ---------------
   * library revision - 0:1:0
